# planka-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
scripts/: discover_chats.py  inspect_delete_action.py
src/app/: __init__.py  bot.py  bot_actions.py  config.py  main.py  notifications.py  poller.py  polling.py  webhook.py
src/app/db/: __init__.py  mappings.py  pool.py  schema.sql
src/app/handlers/: commands.py
src/app/integrations/: planka_client.py
tests/: test_commands.py  test_health.py  test_mappings.py  test_planka_client.py
