[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planka-bot"
version = "0.1.0"
description = "Telegram bot built with FastAPI, aiogram, and Planka integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "greenlet>=3.0.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"app" = ["db/*.sql"]
